commit 1.2 - Refact TextMenu, nowe mniejsze klasy (Adding the UserInput class and refactoring TextMenu to use the new user interface)